<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <include layout="@layout/box_download_failed" />

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutArtist"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        tools:context=".activities.ArtistActivity"
        android:orientation="vertical">

        <include layout="@layout/toolbar_ext" />

        <View android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_shadow"/>

        <ScrollView
            android:id="@+id/scrollview_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_about_tv"
                        android:text="@string/about"
                        style="@style/default_title_with_button"
                        />

                    <Button
                        android:id="@+id/full_bio_btn"
                        style="@style/default_button"
                        android:text="@string/read_more"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/artist_bio_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:paddingBottom="10dp"
                    android:lines="3"
                    android:textColor="#222"
                    android:ellipsize="end"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_similars_tv"
                        android:text="@string/similar_artists"
                        style="@style/default_title_with_button"
                        />

                    <Button
                        android:id="@+id/more_similar_btn"
                        style="@style/default_button"
                        android:text="@string/more"
                        />

                </LinearLayout>

                <include layout="@layout/gridview_artists" />

                <TextView
                    android:id="@+id/title_top_tracks_tv"
                    android:text="@string/top_tracks"
                    style="@style/default_title"
                    />

                <include layout="@layout/gridview_tracks" />

                <TextView
                    android:id="@+id/title_top_albums_tv"
                    android:text="@string/top_albums"
                    style="@style/default_title"
                    />

                <include layout="@layout/gridview_albums" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>